--- a/pytest.ini
+++ b/pytest.ini
@@ -6,6 +6,7 @@
 # it under the terms of the MIT License; see LICENSE file for more details.
 
 [pytest]
+pep8maxlinelength = 99
 pep8ignore = docs/conf.py ALL
 addopts = --pep8 --doctest-glob="*.rst" --doctest-modules --cov=oarepo_references_draft --cov-report=term-missing
 testpaths = docs tests oarepo_references_draft
