--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -30,6 +30,7 @@ include .tx/config
 prune docs/_build
 recursive-include oarepo_references_draft/translations *.po *.pot *.mo
 recursive-exclude sample * *.*
+recursive-exclude docs * *.*
 exclude .envrc
 exclude LICENSE
 exclude .pytest-local.ini
