--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,8 @@ cache:
 env:
   global:
     - POSTGRESQL_SQLALCHEMY_DATABASE_URI="postgresql+psycopg2://postgres@localhost:5432/invenio"
+    - ES6_DOWNLOAD_URL="https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.2.0.tar.gz"
+    - ES_HOST=127.0.0.1
   matrix:
     - REQUIREMENTS=release EXTRAS=all,postgresql,tests SQLALCHEMY_DATABASE_URI=$POSTGRESQL_SQLALCHEMY_DATABASE_URI
     - REQUIREMENTS=release EXTRAS=all,sqlite,tests
@@ -36,6 +38,10 @@ before_install:
   - "travis_retry pip install twine wheel coveralls requirements-builder"
   - "requirements-builder -e $EXTRAS --level=min setup.py > .travis-lowest-requirements.txt"
   - "requirements-builder -e $EXTRAS --level=pypi setup.py > .travis-release-requirements.txt"
+  - mkdir /tmp/elasticsearch
+  - wget -O - $ES6_DOWNLOAD_URL | tar xz --directory=/tmp/elasticsearch --strip-components=1
+  - "/tmp/elasticsearch/bin/elasticsearch &"
+  - sleep 10
 
 install:
   - "travis_retry pip install -r .travis-${REQUIREMENTS}-requirements.txt"
