--- a/.travis.yml
+++ b/.travis.yml
@@ -37,9 +37,9 @@ python:
 
 before_install:
   - "travis_retry pip install --upgrade pip setuptools py"
-  - "travis_retry pip install twine wheel coveralls requirements-builder"
-  - "requirements-builder -e $EXTRAS --level=min setup.py > .travis-lowest-requirements.txt"
-  - "requirements-builder -e $EXTRAS --level=pypi setup.py > .travis-release-requirements.txt"
+  - "travis_retry pip install twine wheel coveralls requirements-builder pip-tools"
+  - "requirements-builder -e $EXTRAS --level=pypi setup.py > .travis-release-requirements.in"
+  - "pip-compile -U --verbose -o .travis-release-requirements.txt .travis-release-requirements.in"
   - mkdir /tmp/elasticsearch
   - wget -O - $ES6_DOWNLOAD_URL | tar xz --directory=/tmp/elasticsearch --strip-components=1
   - "/tmp/elasticsearch/bin/elasticsearch &"
