--- a/.travis.yml
+++ b/.travis.yml
@@ -28,10 +28,10 @@ env:
     - ES_HOST=127.0.0.1
   matrix:
     - REQUIREMENTS=release OAREPO_VERSION=3.1.1   ES=$ES6_DOWNLOAD_URL EXTRAS=postgresql,tests SQLALCHEMY_DATABASE_URI=$POSTGRESQL_SQLALCHEMY_DATABASE_URI
-    - REQUIREMENTS=release OAREPO_VERSION=3.2.0a9 ES=$ES6_DOWNLOAD_URL EXTRAS=postgresql,tests SQLALCHEMY_DATABASE_URI=$POSTGRESQL_SQLALCHEMY_DATABASE_URI
-    - REQUIREMENTS=release OAREPO_VERSION=3.2.0a9 ES=$ES6_DOWNLOAD_URL EXTRAS=sqlite,tests
-    - REQUIREMENTS=release OAREPO_VERSION=3.2.0a9 ES=$ES7_DOWNLOAD_URL EXTRAS=postgresql,tests-es7 SQLALCHEMY_DATABASE_URI=$POSTGRESQL_SQLALCHEMY_DATABASE_URI
-    - REQUIREMENTS=release OAREPO_VERSION=3.2.0a9 ES=$ES7_DOWNLOAD_URL EXTRAS=sqlite,tests-es7
+    - REQUIREMENTS=release OAREPO_VERSION=3.2.0 ES=$ES6_DOWNLOAD_URL EXTRAS=postgresql,tests SQLALCHEMY_DATABASE_URI=$POSTGRESQL_SQLALCHEMY_DATABASE_URI
+    - REQUIREMENTS=release OAREPO_VERSION=3.2.0 ES=$ES6_DOWNLOAD_URL EXTRAS=sqlite,tests
+    - REQUIREMENTS=release OAREPO_VERSION=3.2.0 ES=$ES7_DOWNLOAD_URL EXTRAS=postgresql,tests-es7 SQLALCHEMY_DATABASE_URI=$POSTGRESQL_SQLALCHEMY_DATABASE_URI
+    - REQUIREMENTS=release OAREPO_VERSION=3.2.0 ES=$ES7_DOWNLOAD_URL EXTRAS=sqlite,tests-es7
 
 python:
   - "3.7"
